--- a/report-template/documento.tex
+++ b/report-template/documento.tex
@@ -19,8 +19,8 @@
 %
 \def\titulo{TÍTULO DO RELATÓRIO}
 \def\data{DATA}
-\def\autores{Autor1, Autor2}
-\def\autorescontactos{(nmec1) autor1@ua.pt, (nmec2) autor2@ua.pt}
+\def\autores{António Caetano, Leonardo Luís}
+\def\autorescontactos{(114094) antonio.caetano@ua.pt, (114093) leonardo.luis@ua.pt}
 \def\versao{VERSAO}
 \def\departamento{Dept. de Eletrónica, Telecomunicações e Informática}
 \def\empresa{Universidade de Aveiro}
